ToDo / Roadmap
 - export to pdf
 - up/down/left/right + menu to change from image to image
 - handle empty images (placeholder) differently
 - Load images for Icons in background
 - Implement disable filter
 - Add ability to scale resulting images after cropping
 - progress dialog while exporting / loading
 - Display page preview instead of original image in image list

20121006; YASW 0.1
 - First release
 - handling two page types (left/right)
 - Saving / Loading project Settings
 - Exporting project to images
 - Propaging page/image settings to other pages/images
