@@ -157,7 +157,7 @@ void MainWindow::on_action_Open_triggered()
 }
 
 
-void MainWindow::on_action_Export_triggered()
+void MainWindow::exportToJpeg()
 {
     QString exportFolder = QFileDialog::getExistingDirectory(this,
                 tr("Choose folder for export"),
@@ -167,12 +167,23 @@ void MainWindow::on_action_Export_triggered()
     if (exportFolder.length() == 0)
         return;
 
-    //TODO: save focus of current item or use an independent method to generate exported images.
     ui->imageList->exportToFolder(exportFolder);
 
     QMessageBox::information(this,
                 tr("Project exported"),
                 tr("The project was exported to folder %1").arg(exportFolder)
+                             );
+}
+
+void MainWindow::exportToPdf()
+{
+    QString exportFile = QDir::currentPath() + "/test.pdf";
+
+    ui->imageList->exportToPdf(exportFile);
+
+    QMessageBox::information(this,
+                tr("Project exported"),
+                tr("The project was exported to file %1").arg(exportFile)
                 );
 }
 
